# portfolio-agent

./: .dockerignore  .env.development  .env.example  .gitignore  Dockerfile  build.sh  entrypoint.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
instructions/: .gitignore  system_instruction.template.md
public/: AgentChatWidget.vue  index.html  index.js  style.css
public/components/: AgentChatWidget.vue
public/shared/: ChatServices.js  constans.js
src/: api.py  app.py  chatbash.py  chatbashmcp.py  mcpserver.py
src/apirest/: HistoryRepository.py  RedisClient.py  __init__.py  main.py
src/apirest/middlewares/: AnonymousGuard.py  __init__.py
src/apirest/models/: History.py  Message.py  __init__.py
src/apirest/routers/: chat.py
src/app/routers/: chat.py
src/chat/: __init__.py  ai_agent.py  chat.py  gemini_agent.py
src/chat/datatypes/: BasicHistory.py  Message.py  RedisHistory.py  __init__.py
src/common/: RedisClient.py  __init__.py  constans.py  utilities.py
src/common/DTOs/: HistoryDTO.py  InMessageDTO.py  MessageDTO.py  __init__.py
src/common/Repositories/: HistoryRepository.py  RedisHistoryRepository.py  __init__.py
src/mcpserver/: server.py
